fixing dropdown on mobile, fixing trad issues on navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -57,8 +57,11 @@
 
 
 
-
 /* Dropdown menu */
+// Bug fixing for iphone
+.dropdown {
+  cursor: pointer;
+}
 .navbar-creators-dropdown-menu {
   margin-top: 15px;
   box-shadow: 1px 1px 4px #E6E6E6;
